# zwift-poller

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
homeassistant/: zwift_webhook.yaml
src/zwift_poller/: __init__.py  __main__.py  api.py  auth.py  config.py  poller.py  webhook.py
